force-app/main/default/objects/Division__c/Division__c.object-meta.xml
<CustomObject>
    <label>Group</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>