force-app/main/default/objects/Division__c/fields/Div_FXActual__c.field-meta.xml
<CustomField>
    <fullName>Div_FXActual__c</fullName>
    <formula>Div_FXDirectActual__c  +  Div_FXIndirectActual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FX Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>