force-app/main/default/objects/Division__c/fields/Div_FXDirectActual__c.field-meta.xml
<CustomField>
    <fullName>Div_FXDirectActual__c</fullName>
    <defaultValue>0</defaultValue>
    <label>FX Direct Actual</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>