force-app/main/default/objects/Division__c/fields/Div_FXDirectTarget__c.field-meta.xml
<CustomField>
    <fullName>Div_FXDirectTarget__c</fullName>
    <defaultValue>0</defaultValue>
    <label>FX Direct Target</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>