force-app/main/default/objects/Division__c/fields/Div_FXRetail__c.field-meta.xml
<CustomField>
    <fullName>Div_FXRetail__c</fullName>
    <defaultValue>0</defaultValue>
    <label>FX Retail Target</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>