force-app/main/default/objects/Division__c/fields/Div_FXTarget__c.field-meta.xml
<CustomField>
    <fullName>Div_FXTarget__c</fullName>
    <formula>Div_FXDirectTarget__c  +  Div_FXIndirectTarget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FX Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>