force-app/main/default/objects/Division__c/fields/Div_Group__c.field-meta.xml
<CustomField>
    <fullName>Div_Group__c</fullName>
    <label>Bank</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Group is not active.</errorMessage>
        <filterItems>
            <field>Group__c.Group_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Group__c</referenceTo>
    <relationshipLabel>Groups</relationshipLabel>
    <relationshipName>Divisions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>