force-app/main/default/objects/Division__c/fields/Div_IRRMTarget__c.field-meta.xml
<CustomField>
    <fullName>Div_IRRMTarget__c</fullName>
    <defaultValue>0</defaultValue>
    <label>IRRM Target</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>