force-app/main/default/objects/Division__c/fields/Div_NumberofChilds__c.field-meta.xml
<CustomField>
    <fullName>Div_NumberofChilds__c</fullName>
    <label>Number of Childs</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>