force-app/main/default/objects/Division__c/validationRules/Group_Cannot_be_update_to_inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>Group_Cannot_be_update_to_inactive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Div_NumberofChilds__c &gt; 0,Text(Div_Status__c)=&#39;Inactive&#39;)</errorConditionFormula>
    <errorMessage>Group cannot be updated to Inactive ,as it contains the Active Division.</errorMessage>
</ValidationRule>