force-app/main/default/objects/Division__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Div_Status__c</columns>
    <columns>Div_FXDirectTarget__c</columns>
    <columns>Div_FXDirectActual__c</columns>
    <columns>Div_CRMTarget__c</columns>
    <columns>Div_CRMActual__c</columns>
    <columns>Div_CommTarget__c</columns>
    <columns>Div_CommActual__c</columns>
    <columns>Div_IRRMTarget__c</columns>
    <columns>Div_IRRMActual__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>